# cmake_protobuf_example1

./: .gitignore  CMakeLists.txt  README.md  main.cc
cmake/: protobuf.cmake
proto/: CMakeLists.txt  person.proto  score.proto  value.proto
